--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
+    "next-redux-wrapper": "^8.0.0",
+    "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.2",
-    "swr": "^1.3.0",
+    "sass": "^1.56.1",
     "typescript": "4.9.3"
   }
 }
