auth and all crud working

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_APP_READER_BASE_URL ="https://jsonplaceholder.typicode.com"
+# NEXT_PUBLIC_APP_READER_BASE_URL ="https://jsonplaceholder.typicode.com"
+NEXT_PUBLIC_APP_READER_BASE_URL = "http://localhost:8080/api"
