--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-router": "^5.1.19",
     "antd": "^5.0.0",
     "axios": "^1.2.0",
     "eslint": "8.28.0",
@@ -22,6 +23,7 @@
     "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
