--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "next": "13.0.4",
     "next-redux-wrapper": "^8.0.0",
     "node-sass": "^8.0.0",
@@ -25,6 +27,8 @@
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-loader-spinner": "^5.3.4",
+    "react-messenger-customer-chat": "^0.8.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
