--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-messenger-customer-chat": "^0.8.0",
     "react-moment": "^1.1.2",
